# krab-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: version-bump.yml
scripts/: bump_version.py
src/krab_cli/: __init__.py  cli.py
src/krab_cli/agents/: __init__.py
src/krab_cli/converters/: __init__.py  converter.py  md_builder.py  md_parser.py
src/krab_cli/core/: __init__.py  ambiguity.py  bm25.py  budget.py  chunking.py  delta.py  depgraph.py  entropy.py  fuzzy.py  huffman.py  minhash.py  optimizer.py  readability.py  risk.py  semantic.py  similarity.py  substrings.py  tokens.py
src/krab_cli/memory/: __init__.py
src/krab_cli/models/: __init__.py  spec.py
src/krab_cli/templates/: __init__.py  architecture.py  clarify.py  constitution.py  guardrails.py  plan.py  refining.py  runbook.py  skill.py  task.py
src/krab_cli/utils/: __init__.py  cache.py  display.py
src/krab_cli/workflows/: __init__.py  builtins.py  commands.py  executor.py
tests/: __init__.py  conftest.py  test_agents.py  test_cache.py  test_cli.py  test_cli_new.py  test_cli_spec.py  test_commands.py  test_converters.py  test_fuzzy.py  test_huffman.py  test_memory.py  test_optimizer.py  test_similarity.py  test_templates.py  test_version.py  test_wave1.py  test_wave2.py  test_wave3.py  test_workflows.py
